change : modified slot assignment
